Sexto commit, se arreglaron linkeos

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,7 +68,7 @@ $color-musica: rgba(35, 35, 36, 0.626);
                 color: white;
                 
 
-                background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url(/img/trueno-portada.jpg);
+                background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url(../img/trueno-portada.jpg);
                 background-position: center;
                 background-attachment: fixed;
 
@@ -252,7 +252,7 @@ $color-musica: rgba(35, 35, 36, 0.626);
                 align-items: center;
                 flex-direction: column;
 
-                background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url('/img/trueno-portada3.jfif');
+                background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url('../img/trueno-portada3.jfif');
                 background-attachment: fixed;
                 background-repeat: no-repeat;
                 background-position-y: 50%;
@@ -358,7 +358,7 @@ $color-musica: rgba(35, 35, 36, 0.626);
                 align-items: center;
                 flex-direction: column;
 
-                background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url('/img/trueno-portada2.jpg');
+                background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url('../img/trueno-portada2.jpg');
                 background-attachment: fixed;
                 background-repeat: no-repeat;
                 background-position-y: 20%;
