--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
   flex-direction: column;
   height: 90vh;
   color: white;
-  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url(/img/trueno-portada.jpg);
+  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url(../img/trueno-portada.jpg);
   background-position: center;
   background-attachment: fixed;
 }
@@ -173,7 +173,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url("/img/trueno-portada3.jfif");
+  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url("../img/trueno-portada3.jfif");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: 50%;
@@ -243,7 +243,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url("/img/trueno-portada2.jpg");
+  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)), url("../img/trueno-portada2.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position-y: 20%;
